@@ -5,6 +5,7 @@ UTIL:
 
 BUGFIX:
 * type=address/service | fix for actions=name-rename - to skip if string length > 63
+* type=address actions=value-host-object-add-netmask-m32 | skip if IPv6 address
 
 GENERAL:
 
